WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
310142
[Site Isolation] UI process crash via unchecked mouse event queue access during DidReceiveEvent IPC handling
https://bugs.webkit.org/show_bug.cgi?id=310142
Summary
[Site Isolation] UI process crash via unchecked mouse event queue access duri...
Abrar Rahman Protyasha
Reported
2026-03-17 16:00:50 PDT
rdar://172721665
Attachments
Add attachment
proposed patch, testcase, etc.
Abrar Rahman Protyasha
Comment 1
2026-03-17 16:18:15 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/60817
EWS
Comment 2
2026-03-18 05:24:27 PDT
Committed
309473@main
(a73af3d73e47): <
https://commits.webkit.org/309473@main
> Reviewed commits have been landed. Closing PR #60817 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug